fixed sign up page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -441,53 +441,48 @@ span.input-group-addon i {
       </div>
       </div>
     </div>
-<div class="col-md-5" style="background-image: url('../../profile_back.jpg');"><br><br><br><br><br>
-          <p class="text-center"><img src="../../logo02.png" width="50%"></p> <br><br><br>
-
-          <b><p style="color: white;">Some Japanese Text here blabla</p></b><br>
-          <button type="button" class="btn btn-danger btn-block">Danger</button><br><br><br>
+<div class="col-md-5" style="background-color: #3dd9ff; height: 430px;">
+          <img src="../../logo02.png" style="width: 50%; margin-top: 130px;" class="center-block">
+          <p style="color: white; background-color: #283b54; width: 50%; margin: 50px auto; padding: 5px; border-radius: 5px;" class="text-center">ログイン画面に戻る</p>
         </div>
 
 
+        <div class="col-md-7" style="background-color: #fff; padding: 0;">
 
+          <div class="col-md-12" style="background-color: #283b54; margin-top: 30px; margin-bottom: 50px;">
 
+            <div class="col-md-offset-1 col-md-4" style="background-color: #fff;"><p style="font-size: 1.3em; margin-top: 5px; text-align: center; color: #283b54; font-weight: bold;">新規会員登録</p></div>
+            <div class="col-md-7"><p style="font-size: 1em; margin-top: 10px; color: #fff;"><img src="../../icon_select.png" style="height:20px;"> 新規登録完了で30分の無料トライアル！</p></div>
 
+          </div>
 
-        <div class="col-md-7" style="background-color: white;">
-
-          <div class="w3-bar w3-black" style="margin-top: 20px;">
-            <div class="w3-bar-item w3-hover-white w3-button w3-mobile">SOME JAPANESE TEXT HERE</div>
-            <div class="w3-bar-item w3-hover-white w3-button w3-mobile w3-right">Another Japanese Text Here</div>
-          </div><br><br><br>
           <div class="col-md-6">
-          <div class="form-group mmobile">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-user fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <input type="email" class="form-control" name="email" placeholder="メールアドレス"> <br>    
+          <div class="form-group">
+            <style>
+              
+              input[placeholder] {
+                 text-indent: 60px;
+                 font-weight: bold;
+              }
+            </style>
+
+                  <input type="email" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../icon_nickname.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="ニックネーム">
+            </div> 
+              <div class="form-group">
+                  <input type="password" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="パスワード">
                 </div>
-            </div><br>
-            <div class="form-group mmobile">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <input type="password" class="form-control" name="password" placeholder="Passowrd"> <br>            
-                </div>
-            </div><br>
             </div>
+
             <div class="col-md-6">
-          <div class="form-group mmobile">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <input type="email" class="form-control" name="email" placeholder="メールアドレス"> <br>    
-                </div><br>
+          <div class="form-group">
+                  <input type="email" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="メールアドレス">  
             </div>
-            <div class="form-group mmobile">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <input type="password" class="form-control" name="password" placeholder="Passowrd"> <br>            
-                </div><br>
+
+            <div class="form-group">
+                  <input type="password" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="確認用パスワード">      
             </div>
             </div>
-            <br><br>
+
             <p>
 
                   <label><input type="checkbox" value="agree" name="agreement" required autofocus>私は <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">利用規約</a> を理解し、同意します。</label>
