--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -66,141 +66,23 @@
 
 <!-- End of Facebook Login -->
 
-  </div>
 
-<div class="col-md-offset-1 col-md-6">
-<!--   <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px"> -->
-</div>
-
-<style>
-
-@media only screen and (max-width: 600px) {
-
-.main {
-  margin-top: 0 !important;
-}
-
-.pleft {
-  padding-left: 10px !important;
-  }
-
-.mmobile {
-  margin-top: 30px;
-}
-
- .nopadding {
-  padding: 0;
-  margin-top: 0 !important;
-
- }
-
- .main-center {
-  padding: 10px 10px !important;
-
- }
-} 
-
-.bg {
-  background:url('/bg.jpg');
-  font-family: 'Oxygen', sans-serif;
-
-}
-  
-.main{
-  margin:50px 15px;
-}
-
-hr{
-  width: 10%;
-  color: #fff;
-}
-
-.form-group{
-  margin-bottom: 15px;
-}
-
-label{
-  margin-bottom: 15px;
-}
-
-input,
-input::-webkit-input-placeholder {
-    font-size: 11px;
-    padding-top: 3px;
-}
-
-.main-login{
-  background-color: #fff;
-    /* shadows and rounded borders */
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-
-}
-.form-control {
-    height: auto!important;
-/*padding: 8px 12px !important;*/
-}
-.input-group {
-    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
-    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
-}
-
-.main-center{
-  margin-top: 30px;
-/*  margin: 0 auto;
-  max-width: 400px;*/
-    padding: 10px 40px;
-
-  background:#f7f8f9;
-      color: #000000;
-    text-shadow: none;
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
--moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
-
-}
-span.input-group-addon i {
-    color: #009edf;
-    font-size: 17px;
-}
-
-.login-button{
-  margin-top: 5px;
-}
-
-.login-register{
-  font-size: 11px;
-  text-align: center;
-
-.nomargin {
-  margin: 0 !important;
-  padding: 0 !important;
-  }
-}
-
-</style>
-
-<div class="bg nopadding">
-    <div class="container nopadding">
+<!-- <div class="bg">
+    <div class="container-fluid nopadding">
       <div class="row main">
         <div class="col-md-12">
         <div class="main-login main-center col-md-offset-3 col-md-6">
         <a href="/">
         <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px; margin-top: 35px; margin-bottom: 20px; "></a>
 
-        <%= form_for(@user) do |f| %>
+        <%#= form_for(@user) do |f| %>
             
             <div class="form-group">
               <label for="name" class="cols-md-2 control-label hidden-xs">ニックネーム<small style="color: red">*</small></label>
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-user fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                   <%= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム', :required => '' %>
+                   <%#= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム', :required => '' %>
                 </div>
               </div>
             </div>
@@ -210,7 +92,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-envelope fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス', :required => '' %>
+                  <%#= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス', :required => '' %>
                 </div>
               </div>
             </div>
@@ -220,7 +102,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" style="color:#948c8c" aria-hidden="true"></i></span>
-                   <%= f.password_field :password, class: 'form-control', :placeholder => 'パスワード', :required => ''  %>
+                   <%#= f.password_field :password, class: 'form-control', :placeholder => 'パスワード', :required => ''  %>
                 </div>
               </div>
             </div>
@@ -230,7 +112,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード', :required => '' %>
+                  <%#= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード', :required => '' %>
                 </div>
               </div>
             </div>
@@ -244,17 +126,17 @@ span.input-group-addon i {
                   </div>
 
             </div>
-            <% referral = request.query_parameters 
+            <%# referral = request.query_parameters 
             id = referral['referral']
             instagram = referral['from'] %>
-            <%= f.hidden_field :time, :value => 30 %>
-            <%= f.hidden_field :type_user, :value => "student" %>
-            <%= f.hidden_field :referral_id, :value => id %>
-            <%= f.hidden_field :instagram, :value => instagram %>
+            <%#= f.hidden_field :time, :value => 30 %>
+            <%#= f.hidden_field :type_user, :value => "student" %>
+            <%#= f.hidden_field :referral_id, :value => id %>
+            <%#= f.hidden_field :instagram, :value => instagram %>
 
 
             <div class="form-group">
-            <%= f.submit "登録する", class: "btn btn-primary btn-block btn-lg", name: "new", :value => "今すぐ新規登録" %>
+            <%#= f.submit "登録する", class: "btn btn-primary btn-block btn-lg", name: "new", :value => "今すぐ新規登録" %>
             </div>
 
           <div class="text-center" style="margin-top: 20px; margin-bottom: 20px;">
@@ -268,12 +150,12 @@ span.input-group-addon i {
           </div>
 
         </div>
+ -->
 
 
 
 
-
-        <div class="modal fade" id="agreement" role="dialog">
+<div class="modal fade" id="agreement" role="dialog">
     <div class="modal-dialog modal-lg">
     
       <!-- Modal content-->
@@ -431,23 +313,20 @@ span.input-group-addon i {
       </div>
       
     </div>
-  </div>
-
-<!--         <div class="col-md-offset-1 col-md-6">
-
-        <img src="main.jpg" class="img img-thumbnail" style="margin-top: 150px;">
-
-        </div> -->
+   </div>
       </div>
-      </div>
+<!--       </div>
     </div>
-<div class="col-md-5" style="background-color: #3dd9ff; height: 430px;">
-          <img src="../../logo02.png" style="width: 50%; margin-top: 130px;" class="center-block">
-          <p style="color: white; background-color: #283b54; width: 50%; margin: 50px auto; padding: 5px; border-radius: 5px;" class="text-center">ログイン画面に戻る</p>
+</div>  -->
+<body style="background-image: url('../../bg.jpg');">
+<div class="container" style="margin-top: 100px; border: 1px solid #eee; padding: 0; box-shadow: 5px 10px #ccc;">
+<div class="col-md-5" style="background-color: #3dd9ff; background-image: url('../../signupbg.jpg'); background-size: cover; height: 550px;">
+          <img src="../../logo02.png" style="width: 50%; margin-top: 190px;" class="center-block">
+          <p style="color: white; background-color: #283b54; width: 50%; margin: 50px auto; padding: 5px; border-radius: 5px;" class="text-center"><img src="../../back.png" style="width: 20px; margin-right: 15px;">ログイン画面に戻る</p>
         </div>
 
 
-        <div class="col-md-7" style="background-color: #fff; padding: 0;">
+        <div class="col-md-7" style="background-color: #fff; padding: 0; height: 550px;">
 
           <div class="col-md-12" style="background-color: #283b54; margin-top: 30px; margin-bottom: 50px;">
 
@@ -456,51 +335,58 @@ span.input-group-addon i {
 
           </div>
 
+          <div class="col-md-offset-1 col-md-11">
+
           <div class="col-md-6">
           <div class="form-group">
             <style>
               
               input[placeholder] {
-                 text-indent: 60px;
-                 font-weight: bold;
+                 font-size: 12px;
+                 text-indent: 50px;
               }
             </style>
 
-                  <input type="email" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../icon_nickname.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="ニックネーム">
+                  <input type="email" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../icon_nickname.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="ニックネーム">
             </div> 
               <div class="form-group">
-                  <input type="password" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="パスワード">
+                  <input type="password" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="パスワード">
                 </div>
             </div>
 
             <div class="col-md-6">
           <div class="form-group">
-                  <input type="email" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="メールアドレス">  
+                  <input type="email" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../mail.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="メールアドレス">  
             </div>
 
             <div class="form-group">
-                  <input type="password" class="form-control" style="padding: 10px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 30px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="確認用パスワード">      
+                  <input type="password" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="確認用パスワード">      
             </div>
             </div>
 
             <p>
 
-                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>私は <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">利用規約</a> を理解し、同意します。</label>
+            <label style="margin-top: 50px; margin-left: 15px; margin-bottom: 20px;"><a href="#" style="color: #283b54; text-decoration: underline; font-size: 1.3em;" data-toggle="modal" data-target="#agreement" style="color: #283b54;">利用規約を必ずご確認ください</a></label>
 
             <div class="col-md-12">
-            <button type="button" class="btn btn-success btn-block">Login</button></div><br><br>
-            <div class="col-md-12">
-            <button type="button" class="btn btn-info btn-block">Facebook Login</button></div><br><br><br>
+            <button type="button" class="btn btn-info btn-block" style="background-color: #3dd9ff; padding: 12px; font-weight: bold; box-shadow: 0px 3px 10px rgba(0,0,0,.50); border-radius: 10px;"><i class="fa fa-sign-in"></i> 上記内容で登録（利用規約に同意する）</button>
+
+            <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background-color: #3b5998; border: 1px solid #133783; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-facebook"></i> Facebookで登録（利用規約に同意する）
+            </button>
+
+            <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 0%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border: 1px solid #d6249f; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-instagram"></i> Instagramで登録（利用規約に同意する）
+            </button>
+
+          </div>
             
           </div>
-        </div> -
-
+        </div>
+      </div>
 
 
 </div>
 
-<% end %>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<%# end %>
 
 
 
