--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -318,6 +318,8 @@
 <!--       </div>
     </div>
 </div>  -->
+
+ <%= form_for(@user) do |f| %>
 <body style="background-image: url('../../bg.jpg');">
 <div class="container" style="margin-top: 100px; border: 1px solid #eee; padding: 0; box-shadow: 5px 10px #ccc;">
 <div class="col-md-5" style="background-color: #3dd9ff; background-image: url('../../signupbg.jpg'); background-size: cover; height: 550px;">
@@ -347,20 +349,20 @@
               }
             </style>
 
-                  <input type="email" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../icon_nickname.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="ニックネーム">
+                  <input type="text" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../icon_nickname.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="user[name]" placeholder="ニックネーム" id="user_name" required>
             </div> 
               <div class="form-group">
-                  <input type="password" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="パスワード">
+                  <input type="password" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" placeholder="パスワード" name="user[password]" id="user_password" required>
                 </div>
             </div>
 
             <div class="col-md-6">
           <div class="form-group">
-                  <input type="email" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../mail.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="email" placeholder="メールアドレス">  
+                  <input type="email" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../mail.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" placeholder="メールアドレス" name="user[email]" id="user_email" required>  
             </div>
 
             <div class="form-group">
-                  <input type="password" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" name="password" placeholder="確認用パスワード">      
+                  <input type="password" class="form-control" style="padding: 20px; background-color: #eee; background-image: url('../../lock.png'); background-repeat: no-repeat; background-size: 20px; background-position:10% 50%; border-radius: 10px;" placeholder="確認用パスワード" name="user[password_confirmation]" id="user_password_confirmation" required>      
             </div>
             </div>
 
@@ -368,13 +370,21 @@
 
             <label style="margin-top: 50px; margin-left: 15px; margin-bottom: 20px;"><a href="#" style="color: #283b54; text-decoration: underline; font-size: 1.3em;" data-toggle="modal" data-target="#agreement" style="color: #283b54;">利用規約を必ずご確認ください</a></label>
 
+            <% referral = request.query_parameters 
+            id = referral['referral']
+            instagram = referral['from'] %>
+            <%= f.hidden_field :time, :value => 30 %>
+            <%= f.hidden_field :type_user, :value => "student" %>
+            <%= f.hidden_field :referral_id, :value => id %>
+            <%= f.hidden_field :instagram, :value => instagram %>
+
             <div class="col-md-12">
-            <button type="button" class="btn btn-info btn-block" style="background-color: #3dd9ff; padding: 12px; font-weight: bold; box-shadow: 0px 3px 10px rgba(0,0,0,.50); border-radius: 10px;"><i class="fa fa-sign-in"></i> 上記内容で登録（利用規約に同意する）</button>
+            <button type="submit" name="new" class="btn btn-info btn-block" style="background-color: #3dd9ff; padding: 12px; font-weight: bold; box-shadow: 0px 3px 10px rgba(0,0,0,.50); border-radius: 10px;"><i class="fa fa-sign-in"></i> 上記内容で登録（利用規約に同意する）</button>
 
             <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background-color: #3b5998; border: 1px solid #133783; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-facebook"></i> Facebookで登録（利用規約に同意する）
             </button>
 
-            <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 0%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border: 1px solid #d6249f; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-instagram"></i> Instagramで登録（利用規約に同意する）
+            <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background: #cd486b; border: 1px solid #d6249f; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-instagram"></i> Instagramで登録（利用規約に同意する）
             </button>
 
           </div>
@@ -386,7 +396,7 @@
 
 </div>
 
-<%# end %>
+<% end %>
 
 
 
