--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -66,95 +66,6 @@
 
 <!-- End of Facebook Login -->
 
-
-<!-- <div class="bg">
-    <div class="container-fluid nopadding">
-      <div class="row main">
-        <div class="col-md-12">
-        <div class="main-login main-center col-md-offset-3 col-md-6">
-        <a href="/">
-        <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px; margin-top: 35px; margin-bottom: 20px; "></a>
-
-        <%#= form_for(@user) do |f| %>
-            
-            <div class="form-group">
-              <label for="name" class="cols-md-2 control-label hidden-xs">ニックネーム<small style="color: red">*</small></label>
-              <div class="cols-md-10">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-user fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                   <%#= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム', :required => '' %>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="email" class="cols-md-2 control-label hidden-xs">メールアドレス<small style="color: red">*</small></label>
-              <div class="cols-md-10">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-envelope fa" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%#= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス', :required => '' %>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="password" class="cols-md-2 control-label hidden-xs">パスワード<small style="color: red">*</small></label>
-              <div class="cols-md-10">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" style="color:#948c8c" aria-hidden="true"></i></span>
-                   <%#= f.password_field :password, class: 'form-control', :placeholder => 'パスワード', :required => ''  %>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="confirm" class="cols-md-2 control-label hidden-xs">確認用パスワード<small style="color: red">*</small></label>
-              <div class="cols-md-10">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%#= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード', :required => '' %>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="cols-md-12">
-
-                  <div class="checkbox">
-                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>私は <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">利用規約</a> を理解し、同意します。</label>
-                    
-                  </div>
-
-            </div>
-            <%# referral = request.query_parameters 
-            id = referral['referral']
-            instagram = referral['from'] %>
-            <%#= f.hidden_field :time, :value => 30 %>
-            <%#= f.hidden_field :type_user, :value => "student" %>
-            <%#= f.hidden_field :referral_id, :value => id %>
-            <%#= f.hidden_field :instagram, :value => instagram %>
-
-
-            <div class="form-group">
-            <%#= f.submit "登録する", class: "btn btn-primary btn-block btn-lg", name: "new", :value => "今すぐ新規登録" %>
-            </div>
-
-          <div class="text-center" style="margin-top: 20px; margin-bottom: 20px;">
-          <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" data-button-type="continue_with" data-use-continue-as="true" id="fb1" scope="public_profile,email" onlogin="checkLoginState();"></div>
-          </div>
-
-          </form>
-
-          <div class="col-md-12">
-            <p style="text-align: center;">30分の無料トライアルは 登録後に自動的に付与されます。</p>
-          </div>
-
-        </div>
- -->
-
-
-
-
 <div class="modal fade" id="agreement" role="dialog">
     <div class="modal-dialog modal-lg">
     
@@ -322,7 +233,7 @@
  <%= form_for(@user) do |f| %>
 <body style="background-image: url('../../bg.jpg');">
 <div class="container" style="margin-top: 100px; border: 1px solid #eee; padding: 0; box-shadow: 5px 10px #ccc;">
-<div class="col-md-5" style="background-color: #3dd9ff; background-image: url('../../signupbg.jpg'); background-size: cover; height: 550px;">
+<div class="col-md-5" style="background-color: #3dd9ff; background-image: url('../../profile_back.jpg'); background-size: cover; height: 550px;">
           <img src="../../logo02.png" style="width: 50%; margin-top: 190px;" class="center-block">
           <p style="color: white; background-color: #283b54; width: 50%; margin: 50px auto; padding: 5px; border-radius: 5px;" class="text-center"><img src="../../back.png" style="width: 20px; margin-right: 15px;">ログイン画面に戻る</p>
         </div>
@@ -381,17 +292,17 @@
             <div class="col-md-12">
             <button type="submit" name="new" class="btn btn-info btn-block" style="background-color: #3dd9ff; padding: 12px; font-weight: bold; box-shadow: 0px 3px 10px rgba(0,0,0,.50); border-radius: 10px;"><i class="fa fa-sign-in"></i> 上記内容で登録（利用規約に同意する）</button>
 
-            <div class="text-center" style="margin-top: 20px; margin-bottom: 20px;">
+            <div class="text-center" style="margin-top: 20px; margin-bottom: 20px; font-weight: bold; background-color: #4267b2; border: 1px solid #4267b2; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;">
             <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" data-button-type="continue_with" data-use-continue-as="true" id="fb1" scope="public_profile,email" onlogin="checkLoginState();"></div>
             </div>
 
-            <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background-color: #3b5998; border: 1px solid #133783; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-facebook"></i> Facebookで登録（利用規約に同意する）
-              <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" data-button-type="continue_with" data-use-continue-as="true" id="fb1" scope="public_profile,email" onlogin="checkLoginState();" style="display: hidden;"></div>
-            </button>
+<!--             <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background-color: #3b5998; border: 1px solid #133783; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-facebook"></i> Facebookで登録（利用規約に同意する）
+            </button> -->
 
+            <a href="https://www.instagram.com/oauth/authorize/?client_id=40121d95c810426f8138deb395cff7fc&redirect_uri=http://timee-online.com/insta&response_type=code">
             <button type="button" class="btn btn-default btn-block" style="padding: 12px; font-weight: bold; background: #cd486b; border: 1px solid #d6249f; color: #fff; box-shadow: 0px 3px 10px rgba(0,0,0,.50); margin-top: 15px; border-radius: 10px;"><i class="fa fa-instagram"></i> Instagramで登録（利用規約に同意する）
             </button>
-
+            </a>
           </div>
             
           </div>
