login for mobile

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+<script>
+if (window.name != "xsyz")
+{
+setTimeout("location.reload()",1);
+window.name = "xsyz";
+}
+</script>
+
+
+
 <style>
 
 @media only screen and (max-width: 600px) {
@@ -264,8 +274,10 @@
 <div class="container mobile_margin" style="margin-top: 100px; border: 1px solid #eee; padding: 0; box-shadow: 5px 10px #ccc;">
 
 <div class="col-md-5 hidden-xs" style="background-color: #3dd9ff; background-image: url('../../profile_back.jpg'); background-size: cover; height: 550px;">
+          <a href="/login" style="text-decoration: none;">
           <img src="../../logo02.png" style="width: 50%; margin-top: 190px;" class="center-block">
-          <p style="color: white; background-color: #283b54; width: 50%; margin: 50px auto; padding: 5px; border-radius: 5px;" class="text-center"><img src="../../back.png" style="width: 20px; margin-right: 15px;">ログイン画面に戻る</p>
+          <p style="color: white; background-color: #283b54; width: 50%; margin: 50px auto; padding: 10px; border-radius: 5px;" class="text-center"><img src="../../back.png" style="width: 20px; margin-right: 15px;">ログイン画面に戻る</p>
+          </a>
         </div>
 
         <div class="col-md-7 mobile_h" style="background-color: #fff; padding: 0; height: 550px;">
