--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title,"トップページ") %>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+
 
 
 <%     session.delete(:fowarding_url)
@@ -13,20 +15,24 @@
 <% if current_user.type_user != "not-yet-teacher" %>
 
 		<% unless current_user.type_user == "teacher"%>
-		<!--student-->
-		<!--student-->
-		<!--student-->
-		<div class="container" style="padding:0 3% 0 3%;">
-<!-- 			<h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center"><i class="fa fa-question-circle btn btn-danger" data-toggle="modal" data-target="#welcome">使い方</i><i class="fa fa-signal btn btn-info" style="margin-left: 10px;" data-toggle="modal" data-target="#request">教師を依頼する</i><br>Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2> -->
 
-      <h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center"><i class="fa fa-question-circle btn btn-danger" data-toggle="modal" data-target="#welcome">使い方</i><br>Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2>
-		<!--<h4 style="font-size:15px;">Let's buy teacher's TIME !!</h4>-->
-		        <div class="content">
-						<div class="grid" style=" text-align: center;
-											      margin: auto;">
+		<div class="container">
+
+
 							<% @users.each do |user| %>
 							<% if user.busy == "available" %>
 										<% if user.sex == "male" %>
+
+      <div class="col-md-3" style="margin-top: 20px;">
+         <%= link_to user_path(user) , :class => "" , :style => "color:black;" do %>
+        <img src="<%= user.picture %>" class="img img-responsive img-circle center-block" style="width: 80%; border: 8px solid #f8f8fa; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          <p style="font-family: Quicksand; text-align: center; font-size: 1.2em; margin-top: 10px; font-weight: bold; color: #283b54;" class="center-block"><%= user.name %><p>
+          <p class="center-block" style="text-align: center; background-color: #3dd9ff; width: 50%; padding: 3px; border-radius: 10px; color: #fff; "><i class="fa fa-check-circle"></i> 受講可！</p>
+        <% end %>
+      </div>
+
+                  <div class="content">
+            <div class="grid">
 							
 				<figure class="effect-jazz jazz2">
 							<img src="<%= user.picture %>" style="padding: 5px; background: -moz-radial-gradient(50% 50%, #fff, #fff);background: -webkit-radial-gradient(50% 50%, #fff, #fff); background: -o-radial-gradient(50% 50%, #fff, #fff); background: -ms-radial-gradient(50% 50%, #fff, #fff); background: radial-gradient(50% 50%, #fff, #fff)" />
@@ -48,6 +54,11 @@
 						<% else %>
 
 						<div class="main-with-nav">
+
+        <div class="col-md-2">
+
+        <p>Test</p>
+      </div>
 										
 					<figure class="effect-jazz jazz1">
 			<img src="<%= user.picture %>" style="padding: 5px; background: -moz-radial-gradient(50% 50%, #fff, #fff);background: -webkit-radial-gradient(50% 50%, #fff, #fff); background: -o-radial-gradient(50% 50%, #fff, #fff); background: -ms-radial-gradient(50% 50%, #fff, #fff); background: radial-gradient(50% 50%, #fff, #fff)" />
