--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -37,7 +37,7 @@
 
       <h3>ハロー！<strong>Teacher <%= @user.nick %></strong> です！. <br>私を選んでくれてありがとう！</h3>
 
-<div style="background-color: #f9f9f9; padding: 40px; margin-top: 0; border-top: 2px solid #e9e9e9;">
+<div style="background-color: #f9f9f9; padding: 70px; margin-top: 0; border-top: 2px solid #e9e9e9;">
 <div class="col-md-6">
 
 <img src="<%= @user.picture %>" class="img-responsive img-thumbnail img-circle" style="width:80%;">
@@ -125,7 +125,7 @@ setInterval( function() {
         <div class="col-md-12" style="margin-bottom: 50px;">
         <p>今すぐクラスを開始することができます</p>
         <%= link_to request_call_path(@user) do %>
-        <button class="btn btn-lg btn-success col-md-12" style="padding: 30px; margin-top: 50px;"><i class="fa fa-phone"></i> 今すぐ電話して</button>
+        <button class="btn btn-lg col-md-12" style="padding: 30px; margin-top: 50px; background-color: #e34883; color: #fff;"><i class="fa fa-phone"></i> 今すぐ電話して</button>
         </div>
 
 <!--         <div class="col-md-6" style="margin-bottom: 50px;">
