--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,11 +38,11 @@
 
 </div>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $(window).on('load',function(){
         $('#welcome').modal('show');
     });
-</script>
+</script> -->
 
   <!-- Modal Instruction -->
   <div class="modal fade" id="welcome" role="dialog">
