--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -2,6 +2,8 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
 
 <style>
 
@@ -30,7 +32,7 @@
 
 </style>
 
-<body style="font-family: Quicksand;">
+<body style="font-family: Noto Sans;">
 
 <div class="container text-center">
 
