--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/js/lightbox.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/js/lightbox-plus-jquery.min.js"></script>
  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
 
 
 <style>
@@ -25,7 +27,7 @@
 
 </style>
 
-<body style="font-family: Quicksand;">
+<body style="font-family: Noto Sans;">
 
 <div style="background-color: #f9f9f9; margin-top: 0; border-top: 2px solid #e9e9e9; padding-bottom: 60px;">
 
