--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 
+ <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70797423-33"></script>
 <script>
@@ -18,10 +21,37 @@ a {
 	text-decoration: none !important;
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 600px) {
+
+.mobile_u {
+	border-bottom: 5px solid #fff !important;
+	margin-bottom: 3px;
+
+}
+
+.mobile_font {
+	color: #fff;
+	font-weight: bold;
+}
+
+.mobile_body {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+.mobile_b {
+	background-color: #3dd9ff;
+
+}
+
+.menu_m {
+	width: 100% !important;
+	margin-right: 0 !important;
+}
+
 .mobilemenu {
 	margin-bottom: 30px;
-	margin-top: 20px !important;
+	margin-top: 30px !important;
 	}
 .mobilemotto {
 	font-size: 8px !important;
@@ -46,14 +76,16 @@ a {
 
 </style>
 
+<body style="font-family: Noto Sans">
+<div class="container-fluid mobile_body" style="border-bottom: 1px solid #ccc; margin-top: 20px;">
 
-<div class="container-fluid" style="border-bottom: 1px solid #ccc; margin-top: 20px;">
+		<div class="mobile_b">
 
 		<div class="col-md-3 col-xs-6">
  		<a href="/"><img src="../../../timee-logo.jpg" class="img img-responsive" width="100px;"></a>
 		</div>
 
-		<div class="col-md-6">
+		<div class="col-md-6 hidden-xs">
 
 		<input type="text" name="search" placeholder="講師を検索" class="form-control">
 
@@ -66,79 +98,79 @@ a {
 		</div>
 
 		<div class="row">
-		<div class="col-md-offset-1 col-md-2" style="margin-top: 20px; text-align: center;">
+		<div class="col-md-offset-1 col-md-2 col-xs-3" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
 
 		<% if current_page?('/') %>
 
-		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;">
+		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;" class="menu_m mobile_u">
 
 		<% else %>
 
-		<div style="padding-bottom: 10px;">
+		<div style="padding-bottom: 10px; width: 70%;" class="menu_m">
 
 		<% end %>
 
-		<a href="/"><img src="../../book.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;先生を探す</a></span>
+		<a href="/"><img src="../../book.png" class="hidden-xs" style="width: 20px;"><span style="font-size:10px;" class="mobile_font">&nbsp;&nbsp;先生を探す</a></span>
 
 		</div>
 		</div>
 
 		<% unless current_user.type_user == "teacher" %>
 		
-		<div class="col-md-2" style="margin-top: 20px; text-align: center;">
+		<div class="col-md-2 col-xs-2" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
 
 		<% if request.original_url.include? "purchase"  %>
 
-		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;">
+		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;" class="menu_m">
 
 		<% else %>
 		
-		<div style="padding-bottom: 10px;">
+		<div style="padding-bottom: 10px; width: 70%;" class="menu_m">
 		
 		<% end %>
 
-		<%=  link_to edit3_user_path(current_user.id) do %><img src="../../clock.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;時間チャージ</span>
+		<%=  link_to edit3_user_path(current_user.id) do %><img src="../../clock.png" class="hidden-xs" style="width: 20px;"><span style="font-size:10px;" class="mobile_font">&nbsp;&nbsp;時間チャージ</span>
 		<% end %>
 
 		</div>
 		</div>
 
-		<div class="col-md-2" style="margin-top: 20px; text-align: center;">
+		<div class="col-md-2 col-xs-3" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
 		<% if request.original_url.include? "edit"  %>
 
-		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;">
+		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;" class="menu_m">
 
 		<% else %>
 		
-		<div style="padding-bottom: 10px;">
+		<div style="padding-bottom: 10px; width: 70%;" class="menu_m">
 		
 		<% end %>
 
-		<%=  link_to edit_user_path(current_user.id) do %> <img src="../../user.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;プロフィール</span>
+		<%=  link_to edit_user_path(current_user.id) do %> <img src="../../user.png" class="hidden-xs" style="width: 20px;"><span style="font-size:10px;" class="mobile_font">&nbsp;&nbsp;プロフィール</span>
 		<% end %>
 
 		</div>
 
 		</div>
 
-		<div class="col-md-2" style="margin-top: 20px; text-align: center;">
+		<div class="col-md-2 col-xs-3" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
 		<% if request.original_url.include? "logout"  %>
 
-		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;">
+		<div style="padding-bottom: 10px; border-bottom: 4px solid #3dd9ff; width: 70%;" class="menu_m">
 
 		<% else %>
 		
-		<div style="padding-bottom: 10px;">
+		<div style="padding-bottom: 10px; width: 70%;" class="menu_m">
 		
 		<% end %>
 
-		<%=  link_to "/logout", method: :delete do %><img src="../../logout.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;ログアウト</span>
+		<%=  link_to "/logout", method: :delete do %><img src="../../logout.png" class="hidden-xs" style="width: 20px;"><span style="font-size:10px;" class="mobile_font">&nbsp;&nbsp;ログアウト</span>
 		<% end %>
 
 		</div>
 		</div>
 
-		<div class="col-md-2" style="margin-top: 20px; margin-left: 80px; text-align: right;">
+		<div class="col-md-2 hidden-xs" style="margin-top: 20px; margin-left: 80px; text-align: right;">
 
 		<% @hours = current_user.time / 60 
 	        @mins = (current_user.time) % 60
@@ -190,7 +222,7 @@ a {
 			<% end %>
 			</div>
 		</div>
-
+		
 		<% elsif current_user.type_user == "student" && current_user.country == "Chinese" || "Korean" || "Taiwanese" %>
 
 		<!-- <div class="col-md-5 col-xs-12 mobilemenu" style="margin-top: 40px;">
@@ -275,5 +307,5 @@ a {
 </div>
 
 
-
+</body>
 <% end %>
