--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,14 +24,14 @@ a {
 @media only screen and (max-width: 600px) {
 
 .mobile_u {
-	border-bottom: 5px solid #fff !important;
+	border-bottom: 3px solid #fff !important;
 	margin-bottom: 3px;
 
 }
 
 .mobile_font {
 	color: #fff;
-	font-weight: bold;
+	font-size: 0.7em !important;
 }
 
 .mobile_body {
@@ -40,7 +40,7 @@ a {
 }
 
 .mobile_b {
-	background-color: #3dd9ff;
+	background-color: #3dd9ff !important;
 
 }
 
@@ -76,13 +76,16 @@ a {
 
 </style>
 
-<body style="font-family: Noto Sans">
-<div class="container-fluid mobile_body" style="border-bottom: 1px solid #ccc; margin-top: 20px;">
+<body style="font-family: Noto Sans;">
+<div class="container-fluid mobile_body mobile_b" style="margin-top: 20px;">
 
-		<div class="mobile_b">
 
-		<div class="col-md-3 col-xs-6">
+		<div class="col-md-3 col-xs-6 hidden-xs">
  		<a href="/"><img src="../../../timee-logo.jpg" class="img img-responsive" width="100px;"></a>
+		</div>
+
+		<div class="col-md-3 col-xs-6 hidden-sm hidden-md hidden-lg" style="margin-top: 30px;">
+ 		<a href="/"><img src="../../../logo02.png" class="img img-responsive" width="80px;"></a>
 		</div>
 
 		<div class="col-md-6 hidden-xs">
@@ -91,13 +94,15 @@ a {
 
 		</div>
 
-		<div class="col-md-2" style="text-align: right; margin-left: 80px;">
+		<div class="col-md-2 hidden-xs" style="text-align: right; margin-left: 80px;">
 
 		<a href="#" data-toggle="modal" data-target="#welcome"><i class="fa fa-question-circle fa-3x"></i></a>
 
 		</div>
+</div>
 
-		<div class="row">
+<div class="container-fluid mobile_b">
+
 		<div class="col-md-offset-1 col-md-2 col-xs-3" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
 
 		<% if current_page?('/') %>
@@ -117,7 +122,7 @@ a {
 
 		<% unless current_user.type_user == "teacher" %>
 		
-		<div class="col-md-2 col-xs-2" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
+		<div class="col-md-2 col-xs-3" style="margin-top: 20px; text-align: center; padding-left: 0; padding-right: 0">
 
 		<% if request.original_url.include? "purchase"  %>
 
@@ -221,8 +226,8 @@ a {
 			<%=  link_to "/logout", method: :delete do %><img src="../../logout.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;Logout</span>
 			<% end %>
 			</div>
-		</div>
-		
+
+
 		<% elsif current_user.type_user == "student" && current_user.country == "Chinese" || "Korean" || "Taiwanese" %>
 
 		<!-- <div class="col-md-5 col-xs-12 mobilemenu" style="margin-top: 40px;">
