fixed time and search icons header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -88,7 +88,7 @@ a {
  		<a href="/"><img src="../../../logo02.png" class="img img-responsive" width="80px;"></a>
 		</div>
 
-		<div class="col-xs-offset-1 col-xs-5 hidden-sm hidden-md hidden-lg" style="margin-top: 30px;">
+		<div class="col-xs-5 hidden-sm hidden-md hidden-lg" style="margin-top: 30px;">
 		
 		<% @hours = current_user.time / 60 
 	        @mins = (current_user.time) % 60
