--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -99,7 +99,7 @@
 
 
 
-<div style="background: url('bg.jpg'); background-size: auto; padding-bottom: 30px;">
+<div style="background: url('bg.jpg'); background-size: auto; background-repeat: repeat; padding-bottom: 30px;">
 
 <% if logged_in? %>
 
