fixed student and teacher display

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -103,7 +103,7 @@
 
 <% if logged_in? %>
 
-		<% if current_user.type_user == "student" %>
+		<%# if current_user.type_user == "student" %>
 
 		<div class="container" style="padding:0">
 
@@ -165,7 +165,7 @@
 
     <% end %> <!-- @users.each -->
 
-  <% end %> <!-- current_user.type_user -->
+  <%# end %> <!-- current_user.type_user -->
 <% end %> <!-- logged_in -->
 </div>
 
